# prod_rag

./: .env  README.md  pyproject.toml
deva/: __init__.py  cli.py  config.py  logger.py  requirements.txt
deva/api/: schemas.py  server.py
deva/api/routes/: chat.py  ingest.py
deva/app/: graph.py  guardrails.py  main.py  observability.py  pipeline.py  prompts.py  query_layer.py  rag_chain.py  retriever.py
deva/eval/: ci_eval.py  rag_eval.py  test_dataset.json
deva/ingestion/: indexer.py  loaders.py  splitter.py
deva/providers/: embeddings.py  llm.py
deva/providers/vectorstore/: factory.py
storage/chroma_db/: chroma.sqlite3
