[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deva"
version = "0.1.0"
description = "Local RAG agent using Ollama + Chroma"
authors = [{ name = "Veera" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "langchain",
  "langchain-community",
  "langchain-ollama>=0.1.2",
  "langchain-chroma>=0.2.6",
  "chromadb",
  "sentence-transformers",
  "typer",
  "pypdf",
  "ollama",
  "langchain-huggingface"
]

[project.scripts]
deva = "deva.cli:run"  
